--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nextui-org/react": "^2.2.9",
     "framer-motion": "^10.17.9",
     "next": "14.0.4",
+    "nextjs": "^0.0.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0"
